--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Boxsing-site</h1>
+    <h1>Boxsing-site - 메인페이지 </h1>
     <div> 대련 하자 </div>
 </body>
 </html>
